<resources>
    <string name="app_name">Films</string>
    <string name="click_but_1">Кликнули на кнопку</string>
    <string name="title_list">Список фильмов</string>
    <string name="favorites">Избранное</string>
    <string name="action_search">Поиск</string>
    <string name="action_sort_by_vote">Сортировать по рейтингу</string>
    <string name="action_sort_by_date">Сортировать по дате выхода</string>
    <string name="error">Ошибка</string>
    <string name="reload_again">Обновить</string>
    <string name="ready">Готово</string>
    <string name="now_playing">Сейчас</string>
    <string name="upcoming">Скоро</string>
    <string name="temp">Откроется экран информации</string>
    <string name="budget">Бюджет: %1$s</string>
    <string name="release_date">Дата выхода: %1$s</string>
    <string name="run_time">%1$s мин.</string>
    <string name="click_heart">Кликнули на сердечко</string>
    <string name="dont_know">неизвестно</string>
    <string name="no_connect">Соединения нет</string>
    <string name="connect_has">Соединение есть</string>
    <string name="action_adult">Показывать фильмы для взрослых</string>
    <string name="search_result">Результат поиска</string>
    <string name="note_text_hint">Текст заметки</string>
    <string name="save_note">Сохранить</string>
    <string name="cancel">Закрыть</string>
    <string name="history">Просмотренные</string>
    <string name="showed">Просмотрено: %1$s</string>
    <string name="contacts">Контакты</string>
    <string name="contact_access">Доступ к контактам</string>
    <string name="contact_access_reason">Для отображения контактов необходим доступ к контактам. Дадите разрешение?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="contact_access_explaning">Без доступа к контактам контакты отображены не будут</string>
    <string name="close">Закрыть</string>
    <string name="chose_phone">Выберите телефон для звонка</string>
    <string name="call_refused">Звонки запрещены</string>
    <string name="call_refused_text">Вы запретили звонки в разрешениях</string>
    <string name="map">Карта</string>
    <string name="place_unknow">Место неизвестно</string>
    <string name="geofence_transition_invalid_type">geofence_transition_invalid_type</string>
    <string name="event_geo">Вход в геозону. Рядом кинотеатр %1$s</string>

    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_meaasge">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_title_gps_turned_off">GPS отключён</string>
    <string name="dialog_message_last_location_unknown">Местонахождение неизвестно. Включите GPS, если хотите</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите обновить местонахождение</string>
    <string name="error_add_geofence">Ошибка добавления геозоны</string>
    <string name="add_geofence">Геозона добавлена</string>

</resources>