<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navigation_films"
        android:title="@string/title_list"
        android:icon="@drawable/list_24" />
    <item android:id="@+id/navigation_favorites"
        android:title="@string/favorites"
        android:icon="@drawable/favorites_24" />
    <item android:id="@+id/navigation_history"
        android:title="@string/history"
        android:icon="@drawable/ic_baseline_history_24" />
    <item android:id="@+id/navigation_contacts"
        android:title="@string/contacts"
        android:icon="@drawable/ic_baseline_contacts_24" />
    <item android:id="@+id/navigation_map"
        android:title="@string/map"
        android:icon="@drawable/ic_baseline_map_24" />
</menu>