<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/info_padding"
        android:hint="@string/note_text_hint"
        android:textSize="@dimen/tv_text"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Текст заметки" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_edit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginEnd="@dimen/list_margin_left"
        app:layout_constraintEnd_toStartOf="@id/save_note_btn"
        android:layout_marginTop="@dimen/tv_text"
        app:layout_constraintTop_toBottomOf="@id/note_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_note"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/tv_text"
        android:layout_marginEnd="@dimen/list_margin_left"
        app:layout_constraintTop_toBottomOf="@id/note_text" />
</androidx.constraintlayout.widget.ConstraintLayout>